# flight-search

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DASHBOARD.md  ARCHITECTURE_PIPELINE.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ingestion-image.yml
infrastructure/airflow/dags/: callbacks.py  flight_pipeline_dag.py
infrastructure/docker/airflow/: Dockerfile
infrastructure/docker/ingestion/: Dockerfile
infrastructure/docker/processing/: Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
pipeline/ingestion/: manual_run.py  report.py  run.py
pipeline/processing/: bronze_reader.py  fs.py  quality.py  run_silver.py  silver.py
src/: cache.py  cli.py  config.py  display.py  eu_airports.json  flight_search.py  models.py  scraper.py  utils.py
tests/: conftest.py  test_airflow.py  test_cache.py  test_cli.py  test_display.py  test_flight_search.py  test_ingestion.py  test_processing.py  test_scraper.py  test_utils.py
