[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-search"
version = "0.1.0"
description = "CLI tool for searching flights"
requires-python = ">=3.12"
dependencies = [
    "ryanair-py==0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-mock==3.14.0",
    "freezegun==1.5.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
tmp_path_retention_policy = "failed"