[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-search"
version = "0.1.0"
description = "CLI tool for searching flights"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.0,<14",
    "google-cloud-storage>=2.18.0",
    "ryanair-py==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-mock==3.14.0",
    "freezegun==1.5.1",
    "ruff",
    "mypy",
]

airflow = [
    "apache-airflow==2.10.3",
    "apache-airflow-providers-docker>=3.14.0",
    "google-re2==1.1.20240702",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "pipeline/ingestion", "infrastructure/airflow/dags"]
tmp_path_retention_policy = "failed"

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"